# evolutionary-collective-modes

./: .gitignore  CLAUDE.md  README.md  cmsim.py  evcm_env.yaml  evcm_env.yml  pyproject.toml  toynet_run_simulation.ipynb  toynet_run_simulation.py  toynet_simulation_analysis.ipynb  toynet_simulation_analysis.py
.ipynb_checkpoints/: toynet_run_simulation-checkpoint.ipynb  toynet_simulation_analysis-checkpoint.ipynb
evcm/.ipynb_checkpoints/: __init__-checkpoint.py
evcm/analysis/: analysis.py
evcm/biggmatrices/: biggmatrices.py
evcm/sim/: sim.py
evcm/utils/: utils.py
example_notebooks/: analysis_functions_polars_v2.py
networks/: toynet.npz  toynet_5gene.npz
simulation/: cmsim.py
toynet_simulation_data/: toynet_3211__2025_11_22__chain_predict.json  toynet_3211__2025_11_22__const_SA.csv  toynet_3211__2025_11_22__null_outcomestd.csv  toynet_3211__2025_11_22__test_outcomestd.csv
toynet_simulation_data/run_1_toynet/: run_1_toynet__2025_12_24__SPl.csv  run_1_toynet__2025_12_24__SPu.csv  run_1_toynet__2025_12_24__chain_predict.json  run_1_toynet__2025_12_24__change_in_flux.csv  run_1_toynet__2025_12_24__change_in_lbounds.csv  run_1_toynet__2025_12_24__change_in_ubounds.csv  run_1_toynet__2025_12_24__const_SA.csv  run_1_toynet__2025_12_24__fluxsvs.json  run_1_toynet__2025_12_24__genesvs.json  run_1_toynet__2025_12_24__null_geneSPstd.csv  run_1_toynet__2025_12_24__null_outcomestd.csv  run_1_toynet__2025_12_24__projS_predict.csv  run_1_toynet__2025_12_24__sim_predict.json  run_1_toynet__2025_12_24__test_geneSPstd.csv  run_1_toynet__2025_12_24__test_outcomestd.csv
(+96 files in other folders)
