[project]
name = "evolutionary-collective-modes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "cvxpy",
  "matplotlib",
  "numpy",
  "pandas",
  "polars",
  "qpsolvers",
  "scikit-learn",
  "scipy",
  "seaborn",
  "sympy",
  "jupyterlab",
  "pyarrow",
  "cobra",
  "marimo",
  ]
