[project]
name = "evolutionary-collective-modes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "cvxpy",
  "matplotlib",
  "numpy",
  "pandas",
  "polars",
  "qpsolvers",
  "scikit-learn",
  "scipy",
  "seaborn",
  "sympy",
  "jupyterlab",
  "pyarrow>=14",
  "cobra",
  "marimo",
  "gurobipy>=13.0.1",
]

[dependency-groups]
dev = [
    "line-profiler-gui>=0.2",
    "ruff>=0.15.12",
    "snakeviz>=2.2.2",
    "line-profiler",
    "pyqt5>=5.15.11",
]
